<resources>
    <string name="app_name">SlimMx</string>
    <string name="lb_usuario">Usuario:</string>
    <string name="lb_password">Contraseña:</string>
    <string name="btn_salir_login">Salir</string>
    <string name="btn_envio_Menu">Envio</string>
    <string name="btn_envio_Menu_picking">Envio General</string>
    <string name="btn_recolecta_Menu">Recolecta</string>
    <string name="btn_insumo_Menu">Insumo Interno</string>
    <string name="btn_aceptar_login">Aceptar</string>
    <string name="lbl_menu_sel_packing">Selecciona el tipo de Packing:</string>
    <string name="lbl_menu_sel_picking">Selecciona el tipo de Picking:</string>
    <string name="lbl_menu_sel_embarque">Selecciona el tipo de Embarque:</string>
    <string name="btn_ck_envio">Checkbox</string>
    <string name="btn_ck_Refrescar">Refrescar</string>
    <string name="btn_ok">OK</string>
    <string name="btn_caja">Caja</string>
    <string name="lb_Pickeadas_Envio">Pickeados:</string>
    <string name="lb_Pickeados_porEpacar">Por Empacar:</string>
    <string name="lb_empaquetados_envio">Empaquetadas:</string>
    <string name="lbcodigo">Código</string>
    <string name="lbDescripcion">Descripción</string>
    <string name="lbPicking">Picking</string>
    <string name="lbPacking">Packing</string>
    <string name="lbCantidad">Cantidad</string>
    <string name="lbEmpaque">Empaque</string>
    <string name="lbUnidadesEnvio">Unidades del Envio:</string>
    <string name="lb_recibos">Recibo</string>
    <string name="lb_acomodo">Acomodo</string>
    <string name="lb_consulta_equiquetas">Consulta Etiquetas</string>
    <string name="lb_inventario">Inventario</string>
    <string name="lb_packs_combos">Packs/Combos</string>
    <string name="lb_cedis">Cedis</string>
    <string name="lb_ubicacion">Ubicación</string>
    <string name="lb_almacen">Almacen</string>
    <string name="lb_area">Area</string>
    <string name="lb_box">Box</string>
    <string name="lb_confirmado">Confirmado</string>
    <string name="lb_item">Item</string>
    <string name="lb_ubicacion_destino">Ubicación destino</string>
    <string name="lb_box_destino">Box destino</string>
    <string name="lb_folio">Folio:</string>
    <string name="lb_cancelar">Cancelar</string>
    <string name="lb_confirmar">Confirmar</string>
    <string name="lb_index">N°</string>
    <string name="lb_Unidades">Unidades</string>
    <string name="lb_packid">Pack ID:</string>
    <string name="lb_dirigirseUbi">Dirigirse a Ubicación:</string>
    <string name="lb_dirigirsebox">Dirigirse a box:</string>
    <string name="lb_EscanearCo">Escanear código:</string>
    <string name="lb_Cantidad_a">Cantidad a surtir:</string>
    <string name="lb_ver_imagen">Ver imagen</string>
    <string name="lb_sugerido">-----------</string>
    <string name="lb_packing_id">Packing ID:</string>
    <string name="lb_no_venta">No Venta:</string>
    <string name="lb_Destinatario">Destinatario:</string>
    <string name="lb_Cantidad">Cantidad</string>
    <string name="lb_Sku">Sku</string>
    <string name="lb_title">Title</string>
    <string name="lb_Ubicacion_origen">Ubicación origen</string>
    <string name="lb_Box_origen">Box origen</string>
    <string name="lb_seleccion_cedis">Selecciona el tipo Surtido:</string>
    <string name="lb_razon">Razón</string>
    <string name="lb_supervisor">Supervisor</string>
    <string name="lb_recibo_submenu">Selecciona el tipo de Recibo:</string>
    <string name="lb_abastecimiento">Abastecimiento</string>
    <string name="lb_retorno">Retorno</string>
    <string name="lb_seleccionaImpresora">Selecciona la impresora:</string>
    <string name="lb_cuantas_etiquetasdeseasImprimir">¿Cuantas etiquetas deseas imprimir?</string>
    <string name="lb_n">N°</string>
    <string name="lb_recibida">Recibida</string>
    <string name="lb_orden_compra">Orden de compra</string>
    <string name="lb_status">Status</string>
    <string name="lb_unidades_confir">Unidades por confirmar</string>
    <string name="lb_referencia">Referencia</string>
    <string name="lb_general">General</string>
    <string name="lb_diseno">Diseño</string>
    <string name="lb_cross">Cross</string>
    <string name="lb_devolucion_proveedor">Dev. Pro.</string>
    <string name="lb_seleccion_proceso">Selecciona el tipo de proceso:</string>
    <string name="lb_reacomodo">Reacomodo</string>
    <string name="lb_seleccion_proceso_reacomodo">Selecciona el tipo de Reacomodo:</string>
    <string name="lb_manual">Manual</string>
    <string name="lb_tareas">Tareas</string>
    <string name="lb_areas_name">Area name</string>
    <string name="lb_tipo_defecto">Tipo de defecto</string>
    <string name="lb_validar">Validar</string>
    <string name="lb_unidades_mover">Unidades a mover</string>
    <string name="lb_unidades_destino">Unidades destino</string>
    <string name="lb_confir_ubicacion_destino">Confirmación Ubicación destino</string>
    <string name="lb_confir_box_destino">Confirmación Box destino</string>
    <string name="lb_segundaValidacion">Segunda validación</string>
    <string name="lb_buscadorCombo">Buscador de Combo/Packs:</string>
    <string name="lb_totalPiezas">Total de piezas:</string>
    <string name="lb_piezas">Piezas</string>
    <string name="lb_STOCK_destino">Stock destino</string>
    <string name="lb_consulta_paquetes">Consulta de paquetes</string>
    <string name="lb_seleccion">Selección:</string>
    <string name="lb_ajustes">Ajustes</string>
    <string name="lb_consulta_inventario">Consulta inventario</string>
    <string name="lb_muestreo">Muestreo</string>
    <string name="lb_medidas">Medidas</string>
    <string name="lb_existencia">Existencia</string>
    <string name="lb_ubicaciones">Ubicaciones</string>
    <string name="lb_selecciona_tipo_muestreo">Selecciona el tipo de muestreo:</string>
    <string name="lb_totales_procesar">Totales a procesar:</string>
    <string name="lb_consulta_guias">Consulta Guías</string>
    <string name="lb_ver_faltantes">Ver faltantes</string>
    <string name="lb_verificar_piezas">Verificar piezas</string>
    <string name="lb_stock_virtual">Stock virtual:</string>
    <string name="lb_actualizar">Actualizar</string>
    <string name="lb_apartado">Apartado</string>
    <string name="lb_completa">Completa</string>
    <string name="lb_productos_totales">Productos totales: </string>
    <string name="lb_stock_totales">Stock totales: </string>
    <string name="lb_embarque">Embarque </string>
    <string name="lb_nuevo">Nuevo</string>
    <string name="lb_buscar">Buscar</string>
    <string name="lb_paquetes">Paquetes: </string>
    <string name="lb_nombre_cliente">Cliente </string>
    <string name="lb_venta_interna">Venta Interna</string>
    <string name="lb_control_calidad">Control calidad</string>
    <string name="lb_asignacion">Asignar</string>
    <string name="lb_entrada">Entrada</string>
    <string name="lb_menu_etiquetas_blue">Etiquetas Bluetooth</string>
</resources>