<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Submenus.Submenu_inventarios">

    <Button
        android:id="@+id/buttonAjustes"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="235dp"
        android:layout_height="96dp"
        android:text="@string/lb_ajustes"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:visibility="gone"
        app:cornerRadius="5dp"
        app:icon="@drawable/logo_ajustes"
        app:iconSize="40dp"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        app:rippleColor="#BDF8A3"
        app:strokeColor="@color/black" />

    <Button
        android:id="@+id/buttonConsultaInventario"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="235dp"
        android:layout_height="96dp"
        android:text="@string/lb_consulta_inventario"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:cornerRadius="5dp"
        app:icon="@drawable/logo_consulta_inventario"
        app:iconSize="47dp"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472"
        app:rippleColor="#BDF8A3"
        app:strokeColor="@color/black" />

    <Button
        android:id="@+id/buttonMuestreo"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="235dp"
        android:layout_height="96dp"
        android:text="@string/lb_muestreo"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:cornerRadius="5dp"
        app:icon="@drawable/logo_muestreo"
        app:iconSize="45dp"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738"
        app:rippleColor="#BDF8A3"
        app:strokeColor="@color/black" />

    <Button
        android:id="@+id/buttonMedidas"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="235dp"
        android:layout_height="96dp"
        android:text="@string/lb_medidas"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:visibility="gone"
        app:cornerRadius="5dp"
        app:icon="@drawable/logo_medidas"
        app:iconSize="40dp"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725"
        app:rippleColor="#BDF8A3"
        app:strokeColor="@color/black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="165dp"
        android:layout_height="52dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/lb_seleccion"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />


</androidx.constraintlayout.widget.ConstraintLayout>